Add Firebase polling to check for Measurements from POCKET PORKER mobile app. Remove Measurements endpoint and distribute all relevant Measurement objects into relevant folders. Destroy any semblance of good code design by rushing in Addymer and Alex measurement functionality because they suddenly wanted in.

--- a/MrPorker/example.html
+++ b/MrPorker/example.html
@@ -10,7 +10,243 @@
 <body style="width:390px;">
     <div class="embed-container">
 
+    <div class="d-flex container">
+    <div class="d-flex double-chunk">
+        <div class="d-flex chunk title-chunk">
+            <div>Body Water</div>
+        </div>
+        <div class="d-flex chunk">
+            <div class="label bodywater-low-stat all-time">low</div>
+            <div class="bodywater-low-stat all-time">31.39%</div>
+        </div>
     </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">1D</div>
+        <div class="delta">+0.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">7D</div>
+        <div class="delta">+0.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">30D</div>
+        <div class="delta">-10.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">TOTAL</div>
+        <div class="delta">-20.51%</div>
+    </div>
+</div>
+<div class="top-spacer"></div>
+<hr>
+<div class="top-spacer"></div>
+<div class="d-flex container">
+    <div class="d-flex double-chunk">
+        <div class="d-flex chunk title-chunk">
+            <div>Skeletal Muscle</div>
+        </div>
+        <div class="d-flex chunk">
+            <div class="label skeletalmuscle-low-stat all-time">low</div>
+            <div class="skeletalmuscle-low-stat all-time">15.23%</div>
+        </div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">1D</div>
+        <div class="delta">+0.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">7D</div>
+        <div class="delta">+0.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">30D</div>
+        <div class="delta">+0.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">TOTAL</div>
+        <div class="delta">-31.07%</div>
+    </div>
+</div>
+<div class="top-spacer"></div>
+<hr>
+<div class="top-spacer"></div>
+<div class="d-flex container">
+    <div class="d-flex double-chunk">
+        <div class="d-flex chunk title-chunk">
+            <div>Muscle Mass</div>
+        </div>
+        <div class="d-flex chunk">
+            <div class="label musclemass-inadequate-stat all-time">inadequate</div>
+            <div class="musclemass-inadequate-stat all-time">15.82kg</div>
+        </div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">1D</div>
+        <div class="delta">+0.00kg</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">7D</div>
+        <div class="delta">+0.00kg</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">30D</div>
+        <div class="delta">+0.00kg</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">TOTAL</div>
+        <div class="delta">-45.00kg</div>
+    </div>
+</div>
+<div class="top-spacer"></div>
+<hr>
+<div class="top-spacer"></div>
+<div class="d-flex container">
+    <div class="d-flex double-chunk">
+        <div class="d-flex chunk title-chunk">
+            <div>Bone Mass</div>
+        </div>
+        <div class="d-flex chunk">
+            <div class="label bonemass-aboveaverage-stat all-time">above average</div>
+            <div class="bonemass-aboveaverage-stat all-time">9.11kg</div>
+        </div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">1D</div>
+        <div class="delta">+0.00kg</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">7D</div>
+        <div class="delta">+0.00kg</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">30D</div>
+        <div class="delta">-7.00kg</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">TOTAL</div>
+        <div class="delta">+5.90kg</div>
+    </div>
+</div>
+<div class="top-spacer"></div>
+<hr>
+<div class="top-spacer"></div>
+<div class="d-flex container">
+    <div class="d-flex double-chunk">
+        <div class="d-flex chunk title-chunk">
+            <div>Protein</div>
+        </div>
+        <div class="d-flex chunk">
+            <div class="label protein-inadequate-stat all-time">inadequate</div>
+            <div class="protein-inadequate-stat all-time">11.76%</div>
+        </div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">1D</div>
+        <div class="delta">+0.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">7D</div>
+        <div class="delta">+0.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">30D</div>
+        <div class="delta">-12.00%</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">TOTAL</div>
+        <div class="delta">-4.64%</div>
+    </div>
+</div>
+<div class="top-spacer"></div>
+<hr>
+<div class="top-spacer"></div>
+<div class="d-flex container">
+    <div class="d-flex double-chunk">
+        <div class="d-flex chunk title-chunk">
+            <div>BMR</div>
+        </div>
+        <div class="d-flex chunk">
+            <div class="label basalmetabolicrate-standardnotmet-stat all-time">standard not met</div>
+            <div class="basalmetabolicrate-standardnotmet-stat all-time">1240</div>
+        </div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">1D</div>
+        <div class="delta">+0</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">7D</div>
+        <div class="delta">+0</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">30D</div>
+        <div class="delta">+240</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">TOTAL</div>
+        <div class="delta">-516</div>
+    </div>
+</div>
+<div class="top-spacer"></div>
+<hr>
+<div class="top-spacer"></div>
+<div class="d-flex container">
+    <div class="d-flex double-chunk">
+        <div class="d-flex chunk title-chunk">
+            <div>Metabolic Age</div>
+        </div>
+        <div class="d-flex chunk">
+            <div class="label metabolicage-younger-stat all-time">younger</div>
+            <div class="metabolicage-younger-stat all-time">22</div>
+        </div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">1D</div>
+        <div class="delta">+0</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">7D</div>
+        <div class="delta">+0</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">30D</div>
+        <div class="delta">+2</div>
+    </div>
+    <div class="vr"></div>
+    <div class="d-flex chunk delta-chunk">
+        <div class="subtitle">TOTAL</div>
+        <div class="delta">-6</div>
+    </div>
+</div>
+<div class="top-spacer"></div>
+</div>
 
     <style>
         /* * {
@@ -45,8 +281,10 @@
         }
 
         hr {
-            margin-top: 0.2em;
-            margin-bottom: 0.3em;
+            /* margin-top: 0.2em;
+            margin-bottom: 0.3em; */
+            margin-top: 0;
+            margin-bottom: 0;
             box-sizing: content-box;
             height: 0;
             overflow: visible;
@@ -60,6 +298,7 @@
 
         .chunk {
             flex-direction: column;
+            justify-content: end;
         }
 
         .double-chunk {
@@ -69,11 +308,11 @@
 
         .delta-chunk {
             width: 42px;
+            text-align: right;
         }
 
-        .title-chunk {
-            justify-content: center;
-            align-items: center;
+        .title {
+            margin-left: -0.275em;
         }
 
         .d-flex {
@@ -92,7 +331,6 @@
             color: #999999;
             line-height: 1;
             font-size: 70%;
-            text-align: center;
         }
 
         .all-time {
@@ -101,8 +339,16 @@
 
         .delta {
             font-size: 70%;
-            line-height: 170%;
-            text-align: center;
+        }
+
+        .top-spacer {
+            margin: 0;
+            height: 8px;
+        }
+
+        .bottom-spacer {
+            margin: 0;
+            height: 4px;
         }
 
         .weight-underweight,
