--- a/MrPorker/Assets/HtmlTemplates/MeasurementTemplate.html
+++ b/MrPorker/Assets/HtmlTemplates/MeasurementTemplate.html
@@ -25,7 +25,7 @@
     </div>
     <div class="vr"></div>
     <div class="d-flex chunk delta-chunk">
-        <div class="subtitle">ALL</div>
+        <div class="subtitle">TOTAL</div>
         <div class="delta">{{TOTAL-DELTA}}</div>
     </div>
 </div>
